--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -14,6 +14,15 @@
   "daggerheart-talent-tree.talent-tree.domain-removed": "Domínio removido da árvore",
   "daggerheart-talent-tree.talent-tree.domain-exists": "Este domínio já foi adicionado à árvore",
   "daggerheart-talent-tree.talent-tree.domain-not-found": "Domínio não encontrado",
+  "daggerheart-talent-tree.talent-tree.view-info": "Ver Informações",
+  "daggerheart-talent-tree.talent-tree.create-card": "Criar Carta",
+  "daggerheart-talent-tree.talent-tree.delete-card": "Excluir Carta",
+  "daggerheart-talent-tree.talent-tree.delete-card-confirm-title": "Confirmar Exclusão",
+  "daggerheart-talent-tree.talent-tree.delete-card-confirm-text": "Tem certeza que deseja excluir esta carta? Ela será removida da árvore e do personagem.",
+  "daggerheart-talent-tree.talent-tree.no-card-to-delete": "Não há carta associada a este nó para excluir.",
+  "daggerheart-talent-tree.talent-tree.card-deleted-from-character": "Carta \"{name}\" excluída do personagem.",
+  "daggerheart-talent-tree.talent-tree.card-deleted-from-tree": "Carta removida da árvore de talentos.",
+  "daggerheart-talent-tree.talent-tree.delete-card-error": "Erro ao excluir carta: {error}",
   "daggerheart-talent-tree.talent-tree.create-tree": "Criar Árvore de Talentos",
   "daggerheart-talent-tree.talent-tree.recreate-tree": "Recriar Árvore de Talentos",
   "daggerheart-talent-tree.talent-tree.recreate-tree-confirm": "Tem certeza que deseja recriar a árvore de talentos para {domain}? Isso removerá todos os nós desbloqueados.",
@@ -58,11 +67,25 @@
   "daggerheart-talent-tree.edit-card.browse-image": "Procurar Imagem",
   "daggerheart-talent-tree.edit-card.image-load-error": "Não foi possível carregar a imagem da URL fornecida",
   "daggerheart-talent-tree.edit-card.image-url-empty": "Por favor, insira uma URL de imagem primeiro",
+  "daggerheart-talent-tree.edit-card.no-actions": "Nenhuma action",
+  "daggerheart-talent-tree.edit-card.action-edit-after-save": "As actions só podem ser editadas após salvar a carta.",
   "daggerheart-talent-tree.talent-tree.level": "Nível",
   "daggerheart-talent-tree.talent-tree.level-counter": "Nível {current}/{max}",
   "daggerheart-talent-tree.talent-tree.increase-level": "Aumentar Nível",
   "daggerheart-talent-tree.talent-tree.decrease-level": "Diminuir Nível",
   "daggerheart-talent-tree.talent-tree.available-nodes": "Nós Disponíveis",
   "daggerheart-talent-tree.talent-tree.node-not-available": "Este nó não está disponível para desbloqueio no nível atual",
-  "daggerheart-talent-tree.talent-tree.node-requires-connection": "Este nó requer que um nó conectado esteja desbloqueado primeiro"
+  "daggerheart-talent-tree.talent-tree.node-requires-connection": "Este nó requer que um nó conectado esteja desbloqueado primeiro",
+  "daggerheart-talent-tree.talent-tree.cannot-unlock-at-level-zero": "Não é possível desbloquear talentos no nível 0. Apenas visualização está disponível.",
+  "daggerheart-talent-tree.talent-tree.view-info": "Ver Informações",
+  "daggerheart-talent-tree.talent-tree.edit-card": "Editar Carta",
+  "daggerheart-talent-tree.talent-tree.create-card": "Criar Carta",
+  "daggerheart-talent-tree.talent-tree.card-added-from-compendium": "Carta \"{card}\" adicionada do compendium e associada ao nó!",
+  "daggerheart-talent-tree.talent-tree.card-saved-for-unlock": "Carta \"{card}\" salva no nó! Será adicionada ao personagem quando o nó for desbloqueado.",
+  "daggerheart-talent-tree.select-domain.title": "Selecionar Domínio",
+  "daggerheart-talent-tree.select-domain.select-domain": "Selecione um Domínio",
+  "daggerheart-talent-tree.select-domain.select-domain-help": "Escolha um domínio para adicionar à árvore de talentos. Apenas os domínios permitidos pela classe do jogador são exibidos.",
+  "daggerheart-talent-tree.select-domain.no-domains": "Nenhum domínio disponível para a classe deste jogador.",
+  "daggerheart-talent-tree.select-domain.cancel": "Cancelar",
+  "daggerheart-talent-tree.select-domain.permission-error": "Você não tem permissão para selecionar domínios"
 }
