--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -69,6 +69,13 @@
   "daggerheart-talent-tree.edit-card.image-url-empty": "Por favor, insira uma URL de imagem primeiro",
   "daggerheart-talent-tree.edit-card.no-actions": "Nenhuma action",
   "daggerheart-talent-tree.edit-card.action-edit-after-save": "As actions só podem ser editadas após salvar a carta.",
+  "daggerheart-talent-tree.edit-card.create-action": "Criar Action",
+  "daggerheart-talent-tree.edit-card.delete-action": "Deletar Action",
+  "daggerheart-talent-tree.edit-card.edit-action": "Editar Action",
+  "daggerheart-talent-tree.edit-card.action-create-after-save": "Por favor, salve a carta primeiro antes de criar actions.",
+  "daggerheart-talent-tree.edit-card.action-delete-after-save": "Por favor, salve a carta primeiro antes de deletar actions.",
+  "daggerheart-talent-tree.edit-card.action-created": "Action \"{name}\" criada com sucesso!",
+  "daggerheart-talent-tree.edit-card.action-deleted": "Action \"{name}\" deletada com sucesso!",
   "daggerheart-talent-tree.talent-tree.level": "Nível",
   "daggerheart-talent-tree.talent-tree.level-counter": "Nível {current}/{max}",
   "daggerheart-talent-tree.talent-tree.increase-level": "Aumentar Nível",
